# emby_qbt_auto

./: .gitattributes  .gitignore  README.md  pyproject.toml
deploy/scripts/: backup-live.sh  install-qbt-host-bridge.sh  install-release.sh  rollback.sh  run-dry-run.sh
deploy/systemd/: qbt-orchestrator-daemon.env.example  qbt-orchestrator-daemon.service
docs/implementation/: daemon-upgrade-baseline.md
docs/operations/: canonical-media-migration.md  qbt-host-http-api.md  qbt-localhost-bridge.md  (+2 more)
qbt_orchestrator/: __init__.py
scripts/: fetch-live-baseline.ps1
tests/: conftest.py  fakes.py  test_backfill_naming_tools.py  test_bot_command_store.py  test_budget_engine.py  test_canonical_naming.py  test_capacity_policy.py  test_capacity_reclaim.py  test_capacity_state.py  test_carousel.py  test_cli_module_invocation.py  test_cli_observability.py  test_daemon_runtime.py  test_db_actor_full_write_queue.py  test_download_planner.py  test_file_batch_service.py  test_filename_normalize_adapter.py  test_gdrive_backfill_live_adapter.py  test_io_governor.py  test_junk_janitor.py  test_maintenance.py  test_media_pipeline_persistence.py  test_media_promotion.py  test_new_system_behaviors.py  test_observe_promotion.py  test_orphan_janitor.py  test_periodic_runtime.py  test_production_invariants.py  test_qbt_path_reconcile.py  test_qbt_preferences_guard.py  test_remote_media_migration.py  test_repair_emby_layout.py  test_runtime_integrations.py  test_runtime_repositories.py  test_scheduler_engine.py  test_seeding_preemption.py  test_snapshot_store.py  test_soak_queue.py
(+77 files in other folders)
